# Ignis

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
api/opengl/include/graphics/: gl_context.hpp  gl_functions.hpp  gl_graphics.hpp  gl_header.hpp
api/opengl/include/graphics/memory/: gl_framebuffer.hpp  gl_gpu_buffer.hpp  gl_primitive_buffer.hpp  gl_texture.hpp  gl_texture_object.hpp
api/opengl/include/graphics/shader/: gl_pipeline.hpp  gl_sampler.hpp
api/opengl/include/graphics/surface/: gl_framebuffer.hpp
api/opengl/platform/windows/include/graphics/: wgl_graphics.hpp
api/opengl/platform/windows/include/graphics/surface/: wgl_swapchain.hpp
api/opengl/platform/windows/src/graphics/: wgl_graphics.cpp
api/opengl/platform/windows/src/graphics/surface/: wgl_swapchain.cpp
api/opengl/src/graphics/: gl_graphics.cpp  gl_header.cpp
api/opengl/src/graphics/command/: gl_command_list.cpp
api/opengl/src/graphics/memory/: gl_depth_texture.cpp  gl_framebuffer.cpp  gl_gpu_buffer.cpp  gl_primitive_buffer.cpp  gl_render_texture.cpp  gl_swapchain.cpp  gl_texture.cpp
api/opengl/src/graphics/shader/: gl_descriptors.cpp  gl_pipeline.cpp  gl_sampler.cpp
api/opengl/src/graphics/surface/: gl_framebuffer.cpp  gl_swapchain.cpp
docs/: ViewportInterface.md
include/error/: ignis.hpp
include/graphics/: commandlist.hpp  commandops.hpp  commands.hpp  enums.hpp  format.hpp  gpu_resource.hpp  graphics.hpp  graphics_object.hpp  resource.hpp
include/graphics/command/: command_list.hpp  command_ops.hpp  commands.hpp
include/graphics/errors/: ignis.hpp
include/graphics/memory/: buffer_layout.hpp  depth_texture.hpp  framebuffer.hpp  gpu_buffer.hpp  primitive_buffer.hpp  render_texture.hpp  shader_buffer.hpp  swapchain.hpp  texture.hpp  texture_object.hpp  upload_buffer.hpp
include/graphics/shader/: descriptors.hpp  gl_descriptors.cpp  pipeline.hpp  pipeline_layout.hpp  sampler.hpp
include/graphics/surface/: framebuffer.hpp  surface.hpp  swapchain.hpp
proposals/: abstraction.md  techniques.md
proposals/uml/: Osomi graphics.xml
res/shaders/: blit_image.frag  blit_image.frag.hpp  blit_image.frag.spv  blit_image.vert  blit_image.vert.hpp  blit_image.vert.spv  compile.bat  test.frag  test.frag.spv  test.vert  test.vert.spv
src/graphics/: commandlist.cpp  graphics.cpp  graphics_object.cpp
src/graphics/command/: command_list.cpp  commands.cpp
src/graphics/memory/: framebuffer.cpp  gpu_buffer.cpp  primitive_buffer.cpp  shader_buffer.cpp  texture.cpp  texture_object.cpp  upload_buffer.cpp
src/graphics/shader/: descriptors.cpp  pipeline_layout.cpp  sampler.cpp
src/graphics/surface/: framebuffer.cpp  surface.cpp
test/: test.cpp
